--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ body {
 }
 
 header {
-  background: #C69393;}
+  background: #C69393;
+  align-content: center;}
 
 h1 {
   font-family: 'Bitter', serif;
