--- a/index.css
+++ b/index.css
@@ -14,7 +14,8 @@ h1 {
   font-family: 'Bitter', serif;
   color: #AD8495;
   text-align: center;
-  font-size: 100px}
+  font-size: 100px
+  }
 
 hr {
   position: relative;
